# MemoryProfiler-Workload

./: .gitignore  CMakeLists.txt  README.md  build_workload.sh  run_profiler_test.sh  setup_profiler.sh
include/: Node.hpp  Types.hpp  Utilities.hpp  WorkloadConfig.hpp
profiler/include/: BlockInfo.hpp  Callbacks.hpp  CallbacksRegistration.hpp  Callsite.hpp  MemoryTracker.hpp  OperatorOverrides.hpp  ProfilerAPI.hpp  ProfilerNew.hpp  ReentryGuard.hpp  Serializer.hpp  SocketClient.hpp
profiler/src/: BlockInfo.cpp  Callbacks.cpp  CallbacksRegistration.cpp  MemoryTracker.cpp  OperatorOverrides.cpp  ProfilerAPI.cpp  Serializer.cpp  SocketClient.cpp  main.cpp
src/: AllocStorm.cpp  Fragmenter.cpp  LeakFactory.cpp  Node.cpp  TreeFactory.cpp  Types.cpp  Utilities.cpp  VectorChurn.cpp  WorkloadConfig.cpp  main.cpp
tests/: smoke.sh
